# odaw-final

./: README.md
back-end/: .casa.env  .env  Cargo.toml  diesel.toml
back-end/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
back-end/migrations/2024-06-30-194726_usuarios/: down.sql  up.sql
back-end/migrations/2024-06-30-200131_documentos/: down.sql  up.sql
back-end/migrations/2024-06-30-200137_categorias/: down.sql  up.sql
back-end/src/: db.rs  error_handlers.rs  main.rs  responses.rs  schema.rs
back-end/src/categoria/: model.rs  routes.rs
back-end/src/category/: mod.rs  model.rs
back-end/src/document/: model.rs
back-end/src/documento/: model.rs  routes.rs
back-end/src/user/: mod.rs  model.rs  routes.rs
back-end/src/usuario/: model.rs  routes.rs
banco-dados/: banco.sql
front-end/: index.html  package-lock.json  package.json
front-end/public/css/: meu.css
front-end/src/: App.svelte  utils.js
front-end/src/lib/: Modal.svelte  Popup.svelte
front-end/src/routes/: AtualiarUsuario.svelte  CadastroUsuario.svelte  Contas.svelte  Dashboard.svelte  Documento.svelte  Error404.svelte  Login.svelte  Receitas.svelte
front-end/src/services/: api.js  store.js  utils.js
