[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15"
rocket = {version = "0.5.1", features= ["json", "secrets"]}
postgres = { version = "0.19.7", features = ["with-chrono-0_4", "with-uuid-1"] }
rust_decimal = "1.14.0"
chrono = {version = "0.4", features = ["serde"]}
rand = "0.8.5"
uuid = {version = "1.8.0", features = ["v4", "serde"]}
serde = {version = "1.0", features= ["derive"]}
serde_json = "1.0"
rocket_contrib = "0.4.11"