[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono", "uuid"] }
dotenvy = "0.15"
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
uuid = { version = "1.9.1", features = ["serde"] }
