[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.0", features = [
    "postgres",
    "chrono",
    "uuid",
    "serde_json",
    "numeric",
] }
dotenvy = "0.15"
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
uuid = { version = "1.9.1", features = ["serde"] }
bigdecimal = { version = "0.4.5", features = ["serde-json"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
rocket_cors = { version = "0.6.0" }
sha-crypt = { version = "0.5.0" }
